src/test/tests/syntaxError/doubleSemicolonWhile.wacc
# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    while false do int x = 3;; skip done
end